# cmake_multi_lib_project

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .projectile  CMakeLists.txt  README.md  debug.build.sh
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: ClangTidy.cmake  CodeCoverage.cmake  CompilerWarnings.cmake  Depends.cmake  Doxygen.cmake  GTest.cmake  Install.cmake  Package.cmake  StandardSettings.cmake
lib1/: CMakeLists.txt
lib1/include/lib1/: lib1.h
lib1/src/: prog1.cpp
lib1/test/: CMakeLists.txt  lib1Test.cpp
lib2/: CMakeLists.txt
lib2/include/lib2/: lib2.h
lib2/src/: prog2.cpp
libNet/: CMakeLists.txt
libNet/cmake/: Mongoose.CMakeLists.txt
libNet/include/libNet/: libNet.h
libNet/src/: prog1.cpp
